# stream-line-akheelassadi

./: .gitignore  CMakeLists.txt
.github/workflows/: build-and-run.yml  main-workflow.yml
processor/: processor_sensor_data.py  test_processor.py
src/: main.cpp  sender.cpp  sender.h
tests/: test_sender.cpp
